<resources>
    <string name="app_name">CSC179_Patient_Tracker_App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="FirstName">First Name</string>
    <string name="MiddleName">Middle Name</string>
    <string name="LastName">Last Name</string>
    <string name="DOB">Date of Birth:  DD/MM/YYYY</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="EmailAddress">E-Mail Address</string>
    <string name="Height">Height</string>


    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>